# silly-multi-language-server

./: README.md  solipath  solipath.bat  solipath.json
go/: go.mod  main.go  solipath.json
go/server/: server.go  server_test.go
go/server/myjson/: body_to_object.go
go/server/user/: users.go
kotlin/: build.gradle.kts  solipath.json
kotlin/src/main/kotlin/com/silly/multilanguage/demo/: Application.kt  WebClientConfig.kt
kotlin/src/main/kotlin/com/silly/multilanguage/demo/user/: User.kt  UserController.kt  UserService.kt
kotlin/src/main/resources/: application-test.properties  application.properties
kotlin/src/test/kotlin/com/silly/multilanguage/demo/: UserControllerTest.kt
rust/: Cargo.toml
rust/src/: app_error.rs  main.rs  response_converter.rs  users.rs
typescript/: .gitignore  jest.config.js  package-lock.json  package.json  solipath  solipath.json  tsconfig.json
typescript/src/: index.ts  server.test.ts  server.ts  user.ts
