[package]
name = "rust-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.7.5"
tokio = {version = "1.37.0", features = ["full"]}
tower-http = { version = "0.5.2", features = ["trace"] }
hyper = { version = "1.3", features = ["full"] }
tracing = "0.1"
mime = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
http-body = "1.0"
http-body-util = "0.1.1"
async-trait = "0.1.80"
reqwest = {version = "0.12.4", features = ["default","json"]}
anyhow = "1.0.83"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[target.'cfg(all(target_env = "musl", target_pointer_width = "64"))'.dependencies.mimalloc]
version = "0.1.37"
